cno_k8s/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cno-etl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cno-etl
  template:
    metadata:
      labels:
        app: cno-etl
    spec:
      containers:
      - name: cno-etl
        image: gcr.io/SEU-PROJETO/cno-etl:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
