cno_k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cno-etl-service
spec:
  selector:
    app: cno-etl
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
